[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/r_flower_enemy_sheet.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Red_Flower.gd" type="Script" id=2]
[ext_resource path="res://Assets/r_flower_enemy_dead.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.24783, 3.52016 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3.98791, 7.53616 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7.61018, 6.51248 )

[node name="Red Flower" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.866196, 12.5205 )
shape = SubResource( 7 )

[node name="HurtArea1" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea1"]
position = Vector2( 5.74839, 7.79577 )
shape = SubResource( 8 )

[node name="HurtArea2" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2"]
position = Vector2( -6.22087, 7.79577 )
shape = SubResource( 8 )

[node name="JumpArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2( 0.551216, -5.90588 )
shape = SubResource( 9 )

[node name="DeathTimer" type="Timer" parent="."]
[connection signal="body_entered" from="HurtArea1" to="." method="_on_hurt_area_body_entered"]
[connection signal="body_entered" from="HurtArea2" to="." method="_on_hurt_area_body_entered"]
[connection signal="body_entered" from="JumpArea" to="." method="_on_JumpArea_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
